--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@react-oauth/google": "^0.12.1",
+    "dotenv": "^16.5.0",
+    "firebase": "^11.8.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.0",
     "react-router-dom": "^6.22.2",
-    "@hookform/resolvers": "^3.3.4",
+    "react-spinners": "^0.17.0",
     "yup": "^1.3.3"
   },
   "devDependencies": {
